# eli

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
nginx/: nginx.conf
src/: entrypoint.sh  manage.py  migrate.sh
src/eli/: asgi.py  settings.py  urls.py  wsgi.py
src/eli_app/: admin.py  ai.py  forms.py  models.py  serializers.py  urls.py  views.py
src/eli_app/migrations/: 0001_initial.py  0002_rename_style_audience_rename_commonsnippet_rule_and_more.py  0002_style.py  0003_commonsnippet_delete_conversation_and_more.py  0003_remove_conversation_full_prompt_and_more.py  0004_conversation.py  0004_remove_conversation_response_text.py  0005_alter_audience_options_alter_conversation_options_and_more.py  0005_alter_conversation_id.py  0006_remove_conversation_style_conversation_full_prompt_and_more.py  0006_rename_response_conversation_raw_response_and_more.py  0007_conversation_ai_model_name.py  0008_rename_raw_response_conversation_response_raw_and_more.py  0009_chatresponseevent_imageresponseevent.py  0010_delete_imageresponseevent_and_more.py  0011_generatedimage.py
src/eli_app/templatetags/: json.py
src/frontend/: Api.js  Api.jsx  Api.tsx  App.js  App.jsx  App.scss  App.tsx  AudiencesPage.jsx  Conversation.js  Conversation.jsx  Conversation.tsx  ConversationList.js  ConversationListPage.js  ConversationListPage.jsx  ConversationListPage.tsx  ConversationPage.js  ConversationPage.jsx  ConversationPage.tsx  Dockerfile  ErrorList.jsx  ErrorList.tsx  Form.jsx  Form.tsx  LoginButton.jsx  LoginButton.tsx  Modal.jsx  Modal.tsx  ModelTable.jsx  ModelTable.tsx  Nav.js  Nav.jsx  Nav.tsx  Notification.jsx  Notification.tsx  QueryPage.js  QueryPage.jsx  QueryPage.tsx  QuerySuggestions.tsx  RecentConversations.tsx  RulesPage.jsx  (+15 more)
(+12 files in other folders)
